[package]
name = "goldelox-serial"
version = "0.1.0"
authors = ["Nick Rundle <nicholas.rundle@gmail.com>"]
description = "Rust library for using serial communication with the 4D Systems Goldelox processor"
repository = "https://github.com/nrundle/goldelox-serial-rust"
edition = "2021"
license = "MIT"

[dependencies]
embedded-io = {version = "0.6.1", features = ["std"]}
embedded-io-adapters = {version = "0.6.1", features = ["std"]}
serialport = "4.5.0"
